--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-HTTP_URL="https://mainnet.infura.io/v3/bfa8f7f45967420ca63c33e73b2cafee"
-WSS_URL="wss://mainnet.infura.io/ws/v3/bfa8f7f45967420ca63c33e73b2cafee"
+HTTP_URL=""
+WSS_URL=""
